--- a/HDL/VFC_ISE/VME_bus_summary.html
+++ b/HDL/VFC_ISE/VME_bus_summary.html
@@ -7,7 +7,7 @@
 <TD BGCOLOR='#FFFF99'><B>Project File:</B></TD>
 <TD>VME64e_VFC.xise</TD>
 <TD BGCOLOR='#FFFF99'><b>Parser Errors:</b></TD>
-<TD> No Errors </TD>
+<TD ALIGN=LEFT><font color='red'; face='Arial'><b>X </b></font><A HREF_DISABLED='/ohr/vme64x-core/trunk/HDL/VFC_ISE/_xmsgs/pn_parser.xmsgs?&DataKey=Error'>1 Error</A></TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Module Name:</B></TD>
@@ -17,7 +17,7 @@
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Target Device:</B></TD>
-<TD>xc6slx45t-3fgg484</TD>
+<TD>xc6slx150t-3fgg676</TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Errors:</B></LI></UL></TD>
 <TD>&nbsp;</TD>
 </TR>
@@ -75,5 +75,5 @@
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 01/20/2011 - 15:37:02</center>
+<br><center><b>Date Generated:</b> 01/20/2011 - 17:29:35</center>
 </BODY></HTML>
