--- a/HDL/VFC_ISE/VME_bus_summary.html
+++ b/HDL/VFC_ISE/VME_bus_summary.html
@@ -7,7 +7,7 @@
 <TD BGCOLOR='#FFFF99'><B>Project File:</B></TD>
 <TD>VME64e_VFC.xise</TD>
 <TD BGCOLOR='#FFFF99'><b>Parser Errors:</b></TD>
-<TD ALIGN=LEFT><font color='red'; face='Arial'><b>X </b></font><A HREF_DISABLED='/ohr/vme64x-core/trunk/HDL/VFC_ISE/_xmsgs/pn_parser.xmsgs?&DataKey=Error'>1 Error</A></TD>
+<TD ALIGN=LEFT><font color='red'; face='Arial'><b>X </b></font><A HREF_DISABLED='/ohr/vme64x-core/trunk/HDL/VFC_ISE/_xmsgs/pn_parser.xmsgs?&DataKey=Error'>2 Errors</A></TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Module Name:</B></TD>
@@ -75,5 +75,5 @@
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 01/20/2011 - 17:29:35</center>
+<br><center><b>Date Generated:</b> 01/21/2011 - 16:20:02</center>
 </BODY></HTML>
