--- a/HDL/VME64e_ISE/VME64xCore_Top_summary.html
+++ b/HDL/VME64e_ISE/VME64xCore_Top_summary.html
@@ -1,43 +1,50 @@
 <HTML><HEAD><TITLE>Xilinx Design Summary</TITLE></HEAD>
 <BODY TEXT='#000000' BGCOLOR='#FFFFFF' LINK='#0000EE' VLINK='#551A8B' ALINK='#FF0000'>
-<TABLE BORDER CELLSPACING=0 WIDTH='100%'>
+<TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'>
-<TD COLSPAN='4'><B>VME64e_ISE Project Status (09/02/2010 - 10:19:57)</B></TD></TR>
+<TD ALIGN=CENTER COLSPAN='4'><B>VME64xCore_Top Project Status (01/20/2011 - 10:13:31)</B></TD></TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Project File:</B></TD>
-<TD>VME64e_ISE.ise</TD>
-<TD BGCOLOR='#FFFF99'><B>Current State:</B></TD>
-<TD>Synthesized</TD>
+<TD>VME64e_ISE.xise</TD>
+<TD BGCOLOR='#FFFF99'><b>Parser Errors:</b></TD>
+<TD> No Errors </TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Module Name:</B></TD>
 <TD>VME64xCore_Top</TD>
-<TD BGCOLOR='#FFFF99'><UL><LI><B>Errors:</B></LI></UL></TD>
-<TD>
-No Errors</TD>
+<TD BGCOLOR='#FFFF99'><B>Implementation State:</B></TD>
+<TD>Mapped (Failed)</TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Target Device:</B></TD>
-<TD>xc5vlx30-3ff324</TD>
-<TD BGCOLOR='#FFFF99'><UL><LI><B>Warnings:</B></LI></UL></TD>
-<TD ALIGN=LEFT><A HREF_DISABLED='_xmsgs/*.xmsgs'>44 Warnings</A></TD>
+<TD>xc6slx45t-3fgg484</TD>
+<TD BGCOLOR='#FFFF99'><UL><LI><B>Errors:</B></LI></UL></TD>
+<TD>&nbsp;</TD>
 </TR>
 <TR ALIGN=LEFT>
-<TD BGCOLOR='#FFFF99'><B>Product Version:</B></TD>
-<TD>ISE 10.1 - WebPACK</TD>
+<TD BGCOLOR='#FFFF99'><B>Product Version:</B></TD><TD>ISE 12.4</TD>
+<TD BGCOLOR='#FFFF99'><UL><LI><B>Warnings:</B></LI></UL></TD>
+<TD>&nbsp;</TD>
+</TR>
+<TR ALIGN=LEFT>
+<TD BGCOLOR='#FFFF99'><B>Design Goal:</B></dif></TD>
+<TD>Balanced</TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Routing Results:</B></LI></UL></TD>
 <TD>
 &nbsp;</TD>
 </TR>
 <TR ALIGN=LEFT>
-<TD BGCOLOR='#FFFF99'><B>Design Goal:</B></dif></TD>
-<TD>Balanced</TD>
+<TD BGCOLOR='#FFFF99'><B>Design Strategy:</B></dif></TD>
+<TD><A HREF_DISABLED='Xilinx Default (unlocked)?&DataKey=Strategy'>Xilinx Default (unlocked)</A></TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Timing Constraints:</B></LI></UL></TD>
 <TD>&nbsp;</TD>
 </TR>
 <TR ALIGN=LEFT>
-<TD BGCOLOR='#FFFF99'><B>Design Strategy:</B></dif></TD>
-<TD>Xilinx Default (unlocked)</TD>
+<TD BGCOLOR='#FFFF99'><B>Environment:</B></dif></TD>
+<TD>
+<A HREF_DISABLED='/ohr/vme64x-core/trunk/HDL/VME64e_ISE/VME64xCore_Top_envsettings.html'>
+System Settings</A>
+</TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Final Timing Score:</B></LI></UL></TD>
 <TD>&nbsp;&nbsp;</TD>
 </TR>
@@ -45,9 +52,40 @@ No Errors</TD>
 
 
 
-&nbsp;<BR><TABLE BORDER CELLSPACING=0 WIDTH='100%'>
-<TBODY><TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER width=90% COLSPAN='4'><B>VME64e_ISE Partition Summary</B></TD><TD ALIGN=RIGHT  width=10% COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=PartitionSummary"><B>[-]</B></a></TD></TR></TBODY></TD></TR>
-<TR BGCOLOR='#FFFF99'><TD COLSPAN='5'><B>No partition information was found.</B></TD></TR>
+&nbsp;<BR><TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
+<TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='4'><B>Device Utilization Summary (estimated values)</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=DeviceUtilizationSummary(estimatedvalues)"><B>[-]</B></a></TD></TR>
+<TR ALIGN=CENTER BGCOLOR='#FFFF99'>
+<TD ALIGN=LEFT><B>Logic Utilization</B></TD><TD><B>Used</B></TD><TD><B>Available</B></TD><TD COLSPAN='2'><B>Utilization</B></TD></TR>
+<TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of Slice Registers</TD>
+<TD ALIGN=RIGHT>1534</TD>
+<TD ALIGN=RIGHT>54576</TD>
+<TD ALIGN=RIGHT COLSPAN='2'>2%</TD>
+</TR>
+<TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of Slice LUTs</TD>
+<TD ALIGN=RIGHT>3060</TD>
+<TD ALIGN=RIGHT>27288</TD>
+<TD ALIGN=RIGHT COLSPAN='2'>11%</TD>
+</TR>
+<TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of fully used LUT-FF pairs</TD>
+<TD ALIGN=RIGHT>1007</TD>
+<TD ALIGN=RIGHT>3587</TD>
+<TD ALIGN=RIGHT COLSPAN='2'>28%</TD>
+</TR>
+<TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of bonded IOBs</TD>
+<TD ALIGN=RIGHT>310</TD>
+<TD ALIGN=RIGHT>296</TD>
+<TD ALIGN=RIGHT COLSPAN='2'>104%</TD>
+</TR>
+<TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of Block RAM/FIFO</TD>
+<TD ALIGN=RIGHT>4</TD>
+<TD ALIGN=RIGHT>116</TD>
+<TD ALIGN=RIGHT COLSPAN='2'>3%</TD>
+</TR>
+<TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of BUFG/BUFGCTRLs</TD>
+<TD ALIGN=RIGHT>1</TD>
+<TD ALIGN=RIGHT>16</TD>
+<TD ALIGN=RIGHT COLSPAN='2'>6%</TD>
+</TR>
 </TABLE>
 
 
@@ -56,22 +94,23 @@ No Errors</TD>
 
 
 
-
-
-
-
-&nbsp;<BR><TABLE BORDER CELLSPACING=0 WIDTH='100%'>
-<TBODY><TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER width=90% COLSPAN='6'><B>Detailed Reports</B></TD><TD ALIGN=RIGHT  width=10% COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=DetailedReports"><B>[-]</B></a></TD></TR></TBODY></TD></TR>
+&nbsp;<BR><TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
+<TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='6'><B>Detailed Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=DetailedReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD><B>Generated</B></TD>
 <TD ALIGN=LEFT><B>Errors</B></TD><TD ALIGN=LEFT><B>Warnings</B></TD><TD ALIGN=LEFT COLSPAN='2'><B>Infos</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='VME64xCore_Top.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>èet 2. sep 10:19:55 2010</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='_xmsgs/xst.xmsgs'>44 Warnings</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='_xmsgs/xst.xmsgs'>9 Infos</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='VME64xCore_Top.bld'>Translation Report</A></TD><TD>Out of Date</TD><TD>èet 2. sep 10:10:19 2010</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='VME64xCore_Top_map.mrp'>Map Report</A></TD><TD>Out of Date</TD><TD>èet 2. sep 10:10:35 2010</TD><TD ALIGN=LEFT><font color="red"; face="Arial"><b>X </b></font><A HREF_DISABLED='_xmsgs/map.xmsgs'>2 Errors</A></TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='_xmsgs/map.xmsgs'>4 Infos</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='/ohr/vme64x-core/trunk/HDL/VME64e_ISE/VME64xCore_Top.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>Wed Jan 19 19:12:32 2011</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='/ohr/vme64x-core/trunk/HDL/VME64e_ISE/VME64xCore_Top.bld'>Translation Report</A></TD><TD>Current</TD><TD>Wed Jan 19 19:12:38 2011</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='/ohr/vme64x-core/trunk/HDL/VME64e_ISE/VME64xCore_Top_map.mrp'>Map Report</A></TD><TD>Out of Date</TD><TD>Tue Jan 18 16:49:33 2011</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
 <TR ALIGN=LEFT><TD>Place and Route Report</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
+<TR ALIGN=LEFT><TD>Power Report</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
 <TR ALIGN=LEFT><TD>Static Timing Report</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
 <TR ALIGN=LEFT><TD>Bitgen Report</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
 </TABLE>
+&nbsp;<BR><TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
+<TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='3'><B>Secondary Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=SecondaryReports"><B>[-]</B></a></TD></TR>
+<TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD COLSPAN='2'><B>Generated</B></TD></TR>
+</TABLE>
 
 
-<br><center><b>Date Generated:</b> 09/02/2010 - 10:19:57</center>
+<br><center><b>Date Generated:</b> 01/20/2011 - 11:48:36</center>
 </BODY></HTML>
